--- a/src/views/pages/Login/login.module.scss
+++ b/src/views/pages/Login/login.module.scss
@@ -2,50 +2,99 @@
   width: 100dvw;
   height: 100dvh;
   overflow: hidden;
+  background-image: url('../../../../public/img/patterns_background.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
-  .content {
+.container_secondary {
+  width: 100dvw;
+  height: 100dvh;
+  overflow: hidden;
+  background-image: url('../../../../public/img/patterns_background_secondary.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60dvw;
+  height: 60dvh;
+  border-radius: var(--bd-rds-sm);
+  background-color: var(--background);
+  box-shadow: 0px 0px 14px 2px var(--shadown);
+
+  .container_form {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50dvw;
-    height: 46dvh;
-    border-radius: var(--bd-rds-sm);
-    background-color: var(--background);
+    width: 50%;
+    height: 100%;
+    padding: var(--padding-sm);
 
-    .container_form {
+    .content_form {
+      width: 100%;
       display: flex;
       flex-direction: column;
-      width: 50%;
-      height: 100%;
-      padding: var(--padding-lg);
-
-      .content_form {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: var(--gap-md);
-        align-items: center;
-      }
-    }
-
-    .container_shape {
-      width: 50%;
-      height: 100%;
-      padding: var(--padding-lg);
-      display: flex;
       justify-content: center;
+      gap: var(--gap-md);
+      padding: var(--padding-md);
       align-items: center;
-
-      .container_shape_img {
-        position: absolute;
-      }
     }
+  }
+
+  .container_shape {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    background-image: url('../../../../public/img/shape_login.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+  .container_shape_secondary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    padding: var(--padding-lg);
+    background-image: url('../../../../public/img/shape_login_secondary.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: var(--gap-lt);
+  position: absolute;
+  bottom: 1dvh;
+  left: 50%;
+  transform: translateX(-50%);
+
+  span {
+    font-size: var(--fnt-sz-sm);
+    color: var(--text-d );
+  }
+
+  img {
+    width: 20px;
+    height: 20px;
   }
 }
