--- a/src/views/assets/components/Sidebar/sidebar.module.scss
+++ b/src/views/assets/components/Sidebar/sidebar.module.scss
@@ -53,11 +53,32 @@
     width: 100%;
     height: 100%;
     padding-top: var(--padding-lg);
+    gap: var(--gap-sm);
 
     .topic span {
       font-size: var(--fnt-sz-lt);
       font-weight: var(--fnt-wg-lg);
       color: var(--text-l);
+    }
+
+    .actions {
+      display: flex;
+      width: 100%;
+      height: 100%;
+
+      .option {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: var(--gap-lt);
+      }
+    }
+    .footer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      border-radius: var(--bd-rds-sm);
     }
   }
 }
