--- a/src/views/pages/Login/login.module.scss
+++ b/src/views/pages/Login/login.module.scss
@@ -40,16 +40,25 @@
     align-items: center;
     width: 50%;
     height: 100%;
-    padding: var(--padding-sm);
+    padding: var(--padding-lg);
 
     .content_form {
       width: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: var(--gap-md);
-      padding: var(--padding-md);
       align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      gap: var(--gap-md);
+      padding-bottom: 0;
+    }
+
+    .switchtype {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      gap: var(--gap-sm);
+      color: var(--text-l);
     }
   }
 
@@ -90,7 +99,7 @@
 
   span {
     font-size: var(--fnt-sz-sm);
-    color: var(--text-d );
+    color: var(--text-d);
   }
 
   img {
