--- a/src/views/assets/components/NewPost/newpost.module.scss
+++ b/src/views/assets/components/NewPost/newpost.module.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: var(--padding-md);
+  padding: var(--padding-sm);
   gap: var(--gap-md);
   border-radius: var(--bd-rds-sm);
   background-color: var(--components);
+
   .msg {
     display: flex;
     flex-direction: row;
@@ -16,8 +17,8 @@
 
     .textarea {
       width: 100%;
-      height: 58px;
-      padding: var(--padding-sm) var(--padding-lg);
+      max-height: 100px;
+      padding: var(--padding-lt) var(--padding-md);
       border: none;
       border-radius: var(--bd-rds-sm);
       background-color: var(--background);
