Update Perfil User and Api connections

--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -11,4 +11,11 @@
   <body>
     <div id="root"></div>
   </body>
+  <script>
+    window.process = {
+       env: {
+         REACT_APP_API_BASE_URL: 'https://localhost:8080'
+       }
+    };
+   </script>
 </html>
