--- a/src/views/assets/components/Sidebar/sidebar.module.scss
+++ b/src/views/assets/components/Sidebar/sidebar.module.scss
@@ -8,9 +8,10 @@
 
   .sidebar_perfil {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
+    gap: var(--gap-md);
     padding: var(--padding-lt);
     border-radius: var(--bd-rds-sm);
     background-color: var(--background);
@@ -22,17 +23,16 @@
       border-radius: var(--bd-rds-sm);
       padding: var(--padding-lt);
     }
-    .perfil_img img {
-      width: 3rem;
-      height: 2rem;
+    img {
+      width: 2.5rem;
+      height: 100%;
     }
 
     .perfil_user {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: center;
-      width: 100%;
+      align-items: flex-start;
     }
     .perfil_user_name {
       font-size: var(--fnt-sz-sm);
@@ -50,10 +50,17 @@
   .main {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
     padding-top: var(--padding-lg);
     gap: var(--gap-sm);
+
+    .content{
+      display: flex;
+      flex-direction: column;
+      gap: var(--gap-md);
+    }
 
     .topic span {
       font-size: var(--fnt-sz-lt);
@@ -64,7 +71,6 @@
     .actions {
       display: flex;
       width: 100%;
-      height: 100%;
 
       .option {
         width: 100%;
@@ -76,8 +82,9 @@
     .footer {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
       width: 100%;
+      gap: var(--gap-lt);
       border-radius: var(--bd-rds-sm);
     }
   }
