modal register, perfil user

--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -14,40 +14,54 @@
   --secondarydark: #e3d053;
 
   /* LANGUAGE COLORS */
-  --html: #e44d26;
-  --css: #2965f1;
-  --javascript: #f0db4f;
-  --react: #61dafb;
-  --node: #3c873a;
-  --sql: #336791;
-  --python: #306998;
-  --java: #5382a1;
+  --antDesign: #0170fe;
+  --apollo: #3c20a7;
+  --bootstrap: #563d7c;
   --csharp: #68217a;
-  --php: #8892be;
-  --ruby: #cc342d;
-  --go: #00add8;
-  --swift: #f05138;
-  --kotlin: #0095d5;
-  --typescript: #3178c6;
-  --flutter: #02569b;
+  --css: #2965f1;
   --dart: #0175c2;
-  --elixir: #4e2a8e;
-  --rust: #000000;
-  --scala: #c22d40;
-  --haskell: #5e5086;
-  --r: #276dc3;
-  --perl: #39457e;
-  --lua: #000080;
-  --shell: #89e051;
   --docker: #0db7ed;
-  --kubernetes: #326ce5;
-  --jenkins: #d24939;
+  --elixir: #4e2a8e;
+  --emotion: #f6e7f2;
+  --flutter: #02569b;
   --git: #f34f29;
   --github: #181717;
   --gitlab: #fc6d26;
-  --bitbucket: #0052cc;
-  --jira: #0052cc;
-
+  --go: #00add8;
+  --graphql: #e10098;
+  --haskell: #5e5086;
+  --html: #e44d26;
+  --java: #5382a1;
+  --jenkins: #d24939;
+  --javascript: #f0db4f;
+  --jquery: #0868ac;
+  --kotlin: #0095d5;
+  --lua: #000080;
+  --materialUi: #0081cb;
+  --materialize: #ee6e73;
+  --mobx: #ff9955;
+  --node: #3c873a;
+  --perl: #39457e;
+  --php: #8892be;
+  --python: #306998;
+  --react: #61dafb;
+  --reactNative: #5bcbea;
+  --redux: #764abc;
+  --rest: #5570ff;
+  --ruby: #cc342d;
+  --rust: #000000;
+  --sass: #c69;
+  --scss: #d2639b;
+  --scala: #c22d40;
+  --shell: #89e051;
+  --socketio: #010101;
+  --sql: #336791;
+  --styledComponents: #db7093;
+  --swift: #f05138;
+  --tailwind: #38b2ac;
+  --typescript: #3178c6;
+  --websockets: #ffcc00;
+  
   /* TYPOGRAPHY */
   --text-d: #000012;
   --text-l: #f8f9fc;
