--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -14,7 +14,7 @@
   <script>
     window.process = {
        env: {
-         REACT_APP_API_BASE_URL: 'https://localhost:8080'
+         REACT_APP_API_BASE_URL: 'http://localhost:8080'
        }
     };
    </script>
