--- a/src/views/assets/components/Modal/modal.module.scss
+++ b/src/views/assets/components/Modal/modal.module.scss
@@ -23,6 +23,7 @@
   width: 80%;
   max-width: 500px;
   position: relative;
+  animation: popUp 0.5s ease-in-out forwards;
 }
 
 .close {
@@ -41,4 +42,15 @@
   padding: var(--padding-sm);
   border-top: 1px solid var(--components);
   border-radius: 0 0 var(--bd-rds-sm) var(--bd-rds-sm);
+}
+
+@keyframes popUp {
+  0% {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
