--- a/src/views/pages/Main/main.module.scss
+++ b/src/views/pages/Main/main.module.scss
@@ -24,10 +24,11 @@
   justify-content: space-between;
   align-items: center;
   width: 40dvw;
-  height: 80dvh;
+  height: 90dvh;
   border-radius: var(--bd-rds-sm);
   border: 1px solid var(--components);
   background-color: var(--background);
+  animation: popUp 0.5s ease-in-out forwards;
 
   .modalContent {
     display: flex;
@@ -46,5 +47,24 @@
       align-items: center;
       width: 100%;
     }
+
+    .bodyModal {
+      display: flex;
+      flex-direction: column;
+      padding: var(--padding-sm);
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+@keyframes popUp {
+  0% {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
   }
 }
