--- a/src/views/assets/components/Perfil/perfil.module.scss
+++ b/src/views/assets/components/Perfil/perfil.module.scss
@@ -8,6 +8,74 @@
   border-radius: var(--bd-rds-sm);
   background-color: var(--components);
 
+  .modalContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 55dvw;
+    height: 55dvh;
+    border-radius: var(--bd-rds-sm);
+    border: 1px solid var(--components);
+    background-color: var(--background);
+    animation: popUp 0.5s ease-in-out forwards;
+    z-index: var(--zindex);
+
+    .headerModal{
+      padding: var(--padding-sm);
+      color: var(--text-l);
+      font-size: var(--fnt-sz-md);
+      font-weight: var(--fnt-wg-lg);
+    }
+
+    .bodyModal{
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      width: 100%;
+      height: 100%;
+      gap: var(--gap-sm);
+      color: var(--text-l);
+      padding-inline: var(--padding-md);
+      
+      .sectionModal{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        gap: var(--gap-md);
+      }
+
+      .inputContainer {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        
+        .defaultInput{
+          all: unset;
+          padding: var(--padding-lt);
+          border: 1px solid rgba(255, 255, 255, 0.23);
+          border-radius: var(--bd-rds-lt);
+          background-color: transparent;
+          cursor: text;
+    
+          &:hover {
+            border: 1px solid var(--border);
+          }
+    
+          &:focus {
+            border: 1px solid var(--primary);
+          }
+        }
+
+        .defaultInput::-webkit-calendar-picker-indicator {
+          filter: invert(1) brightness(100%) sepia(100%) saturate(100%)
+            hue-rotate(180deg);
+            cursor: pointer;
+        }
+      }
+    }
+  }
+
   .header {
     display: flex;
     justify-content: flex-start;
@@ -20,7 +88,6 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: var(--zindex);
 
     .imgUser {
       display: flex;
@@ -98,7 +165,22 @@
       flex-direction: column;
       width: 40%;
       gap: var(--gap-md);
-      padding-inline: var(--padding-md);
+      padding-left: var(--padding-md);
+
+      .skillsTag {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        padding: 0 0 var(--padding-lt) var(--padding-lt);
+        border-bottom: 2px solid var(--text-g);
+        color: var(--text-l);
+
+        ::before {
+          content: '- ';
+          color: var(--text-g);
+        }
+      }
 
       .skills {
         display: flex;
@@ -121,6 +203,34 @@
         justify-content: flex-start;
         width: 100%;
         gap: var(--gap-sm);
+
+        .spanSkills {
+          display: flex;
+          justify-content: center;
+          text-align: center;
+          width: 100%;
+          color: var(--text-g);
+          font-size: var(--fnt-sz-md);
+          font-weight: var(--fnt-wg-md);
+        }
+
+        .spanSkillsAmount {
+          display: flex;
+          justify-content: center;
+          width: 100%;
+          color: var(--text-g);
+          font-size: var(--fnt-sz-sm);
+
+          ::before {
+            content: 'Existem mais ';
+            color: var(--text-g);
+          }
+
+          ::after {
+            content: ' skills não listadas';
+            color: var(--text-g);
+          }
+        }
       }
     }
   }
