update Post page

--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -90,6 +90,7 @@
   --btn-hover: var(--secondary);
 
   /* PADDING */
+  --padding-xlt: 0.4rem;
   --padding-lt: 0.5rem;
   --padding-sm: 1rem;
   --padding-md: 1.5rem;
