--- a/src/views/assets/components/Home/home.module.scss
+++ b/src/views/assets/components/Home/home.module.scss
@@ -6,4 +6,13 @@
     width: 100%;
     gap: var(--gap-md);
     overflow: hidden;
+
+    .content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        gap: var(--gap-sm);
+    }
 }
