--- a/src/views/assets/components/NewPost/newpost.module.scss
+++ b/src/views/assets/components/NewPost/newpost.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   padding: var(--padding-sm);
-  gap: var(--gap-md);
+  gap: var(--gap-lt);
   border-radius: var(--bd-rds-sm);
   background-color: var(--components);
 
@@ -14,6 +14,11 @@
     align-items: center;
     width: 100%;
     gap: var(--gap-md);
+
+    img {
+      width: 26px;
+      height: 100%;
+    }
 
     .textarea {
       width: 100%;
@@ -33,4 +38,27 @@
       }
     }
   }
+
+  .options {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    padding-inline: var(--padding-xl);
+    gap: var(--gap-lg);
+  }
+}
+
+.container_modal{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 65dvw;
+  height: 75dvh;
+  border-radius: var(--bd-rds-sm);
+  border: 1px solid var(--components);
+  background-color: var(--background);
+  animation: popUp 0.5s ease-in-out forwards;
 }
