--- a/src/views/assets/components/Login/Form/form.module.scss
+++ b/src/views/assets/components/Login/Form/form.module.scss
@@ -48,6 +48,11 @@
       align-items: center;
       width: 100%;
       gap: var(--gap-lt);
+
+      .eyeBtn{
+        position: relative;
+        right: 3%;
+      }
     }
   }
 }
