--- a/src/views/assets/components/Home/home.module.scss
+++ b/src/views/assets/components/Home/home.module.scss
@@ -14,5 +14,16 @@
         width: 100%;
         height: 100%;
         gap: var(--gap-sm);
+
+        .noPost{
+            display: flex;
+            justify-content: center;
+            align-items: end;
+            width: 100%;
+            height: 40dvh;
+            color: var(--text-g);
+            font-size: var(--fnt-sz-md);
+            font-weight: var(--fnt-wg-md);
+        }
     }
 }
