Update Modal Post for comments, header and image finaly

--- a/src/utils/global.scss
+++ b/src/utils/global.scss
@@ -13,6 +13,8 @@
   --primarydark: #5360e3;
   --secondarydark: #e3d053;
 
+  --backgroundGlass: rgba(35, 36, 42, 0.9);
+
   /* LANGUAGE COLORS */
   --antDesign: #0170fe;
   --apollo: #3c20a7;
