--- a/src/views/pages/Login/login.module.scss
+++ b/src/views/pages/Login/login.module.scss
@@ -31,7 +31,7 @@
   height: 60dvh;
   border-radius: var(--bd-rds-sm);
   background-color: var(--background);
-  box-shadow: 0px 0px 14px 2px var(--shadown);
+  box-shadow: 0px 0px 14px 2px rgba(41, 44, 83, 0.5);
 
   .container_form {
     display: flex;
