--- a/src/views/assets/components/NewPost/newpost.module.scss
+++ b/src/views/assets/components/NewPost/newpost.module.scss
@@ -16,8 +16,9 @@
     gap: var(--gap-md);
 
     img {
-      width: 26px;
+      width: 100%;
       height: 100%;
+      object-fit: cover;
     }
 
     .textarea {
