--- a/src/views/assets/components/Perfil/perfil.module.scss
+++ b/src/views/assets/components/Perfil/perfil.module.scss
@@ -14,21 +14,21 @@
     justify-content: space-between;
     align-items: center;
     width: 55dvw;
-    height: 55dvh;
+    height: 80dvh;
     border-radius: var(--bd-rds-sm);
     border: 1px solid var(--components);
     background-color: var(--background);
     animation: popUp 0.5s ease-in-out forwards;
     z-index: var(--zindex);
 
-    .headerModal{
+    .headerModal {
       padding: var(--padding-sm);
       color: var(--text-l);
       font-size: var(--fnt-sz-md);
       font-weight: var(--fnt-wg-lg);
     }
 
-    .bodyModal{
+    .bodyModal {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -37,8 +37,35 @@
       gap: var(--gap-sm);
       color: var(--text-l);
       padding-inline: var(--padding-md);
-      
-      .sectionModal{
+
+        .perfil_image {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+
+          .user_img_btn {
+            width: 160px;
+            height: 160px;
+            padding: var(--padding-sm);
+            border-radius: var(--bd-rds-xl);
+            background-color: var(--components);
+            padding: var(--padding-lt);
+
+            img {
+              width: 100%;
+              height: 100%;
+              border-radius: var(--bd-rds-xl);
+            }
+
+            .ipt_img {
+              display: none;
+            }
+          }
+      }
+
+      .sectionModal {
         display: flex;
         flex-direction: row;
         width: 100%;
@@ -49,19 +76,19 @@
         display: flex;
         flex-direction: column;
         width: 50%;
-        
-        .defaultInput{
+
+        .defaultInput {
           all: unset;
           padding: var(--padding-lt);
           border: 1px solid rgba(255, 255, 255, 0.23);
           border-radius: var(--bd-rds-lt);
           background-color: transparent;
           cursor: text;
-    
+
           &:hover {
             border: 1px solid var(--border);
           }
-    
+
           &:focus {
             border: 1px solid var(--primary);
           }
@@ -70,7 +97,7 @@
         .defaultInput::-webkit-calendar-picker-indicator {
           filter: invert(1) brightness(100%) sepia(100%) saturate(100%)
             hue-rotate(180deg);
-            cursor: pointer;
+          cursor: pointer;
         }
       }
     }
@@ -111,7 +138,7 @@
         width: 100%;
         height: 100%;
         border-radius: var(--bd-rds-xl);
-        object-fit: contain;
+        object-fit: cover;
       }
     }
 
