--- a/src/views/assets/components/Post/post.module.scss
+++ b/src/views/assets/components/Post/post.module.scss
@@ -57,6 +57,7 @@
       .actions {
         display: flex;
         position: relative;
+        gap: var(--gap-sm);
 
         .dropdown {
           display: flex;
@@ -79,22 +80,51 @@
   .content {
     display: flex;
     flex-direction: column;
-    gap: var(--gap-xlt);
     z-index: -1;
 
     .textPost {
-      padding: var(--padding-sm) var(--padding-md);
-      font-size: var(--fnt-sz-sm);
-      color: var(--text-l);
-    }
+      padding: var(--padding-md);
+      padding-bottom: 0;
 
+      .textAreaDefault {
+        width: 100%;
+        max-height: 160px;
+        border: none;
+        border-radius: var(--bd-rds-lt);
+        background-color: var(--components);
+        color: var(--text-l);
+        font-size: var(--fnt-sz-sm);
+        resize: none;
+        outline: none;
+        cursor: auto;
+      }
+
+      .textArea {
+        width: 100%;
+        max-height: 100px;
+        padding: var(--padding-lt) var(--padding-md);
+        border: none;
+        border-radius: var(--bd-rds-lt);
+        background-color: var(--background);
+        color: var(--text-l);
+        font-size: var(--fnt-sz-sm);
+        resize: none;
+        outline: none;
+        cursor: text;
+        transition: var(--trns);
+
+        &:focus {
+          border: 1px solid var(--primary);
+        }
+      }
+    }
     .body {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       gap: var(--gap-sm);
-      padding: var(--padding-sm) var(--padding-md);
+      padding: var(--padding-lt) var(--padding-md);
     }
   }
 
@@ -144,6 +174,25 @@
   border-radius: var(--bd-rds-sm);
   z-index: 1000;
   background-color: var(--components);
+  padding: var(--padding-md);
+
+  .contentModal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+
+    span {
+      font-size: var(--fnt-sz-md);
+      color: var(--text-l);
+    }
+
+    .modalDeleteActions {
+      display: flex;
+      justify-content: flex-end;
+      gap: var(--gap-sm);
+    }
+  }
 }
 
 .container_modal {
