--- a/src/views/assets/components/Post/NewComment/newcomment.module.scss
+++ b/src/views/assets/components/Post/NewComment/newcomment.module.scss
@@ -1,7 +1,73 @@
 .container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
   width: 100%;
+  padding: var(--padding-lt);
+  padding-block: 0;
   gap: var(--gap-sm);
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: var(--padding-lt);
+    padding-block: 0;
+    gap: var(--gap-sm);
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .textArea {
+      width: 100%;
+      max-height: 100px;
+      padding: var(--padding-lt) var(--padding-md);
+      border: none;
+      border-radius: var(--bd-rds-lt);
+      background-color: var(--background);
+      color: var(--text-l);
+      font-size: var(--fnt-sz-sm);
+      resize: none;
+      outline: none;
+      cursor: text;
+      transition: var(--trns);
+
+      &:focus {
+        border: 1px solid var(--primary);
+      }
+    }
+  }
+
+  .actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: var(--padding-sm);
+    gap: var(--gap-sm);
+
+    .buttons {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: var(--gap-sm);
+    }
+  }
+
+  .imgComment{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    border-radius: var(--bd-rds-lt);
+
+    img {
+      width: 100%;
+      height: 20dvh;
+      border-radius: var(--bd-rds-lt);
+      object-fit: cover;
+    }
+  }
 }
