--- a/src/views/assets/components/Perfil/perfil.module.scss
+++ b/src/views/assets/components/Perfil/perfil.module.scss
@@ -7,6 +7,8 @@
   color: var(--white);
   border-radius: var(--bd-rds-sm);
   background-color: var(--components);
+  animation: allFade 0.5s ease-in-out forwards;
+  overflow: hidden;
 
   .modalContainer {
     display: flex;
@@ -38,31 +40,31 @@
       color: var(--text-l);
       padding-inline: var(--padding-md);
 
-        .perfil_image {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
+      .perfil_image {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-          .user_img_btn {
-            width: 160px;
-            height: 160px;
-            padding: var(--padding-sm);
+        .user_img_btn {
+          width: 160px;
+          height: 160px;
+          padding: var(--padding-sm);
+          border-radius: var(--bd-rds-xl);
+          background-color: var(--components);
+          padding: var(--padding-lt);
+
+          img {
+            width: 100%;
+            height: 100%;
             border-radius: var(--bd-rds-xl);
-            background-color: var(--components);
-            padding: var(--padding-lt);
-
-            img {
-              width: 100%;
-              height: 100%;
-              border-radius: var(--bd-rds-xl);
-            }
-
-            .ipt_img {
-              display: none;
-            }
           }
+
+          .ipt_img {
+            display: none;
+          }
+        }
       }
 
       .sectionModal {
@@ -196,6 +198,19 @@
       gap: var(--gap-md);
       padding-left: var(--padding-md);
 
+      .friends{
+        display: flex;
+        align-items: center;
+        gap: var(--gap-lt);
+        padding: var(--padding-lt);
+        padding-inline: var(--padding-sm);
+        border-radius: var(--bd-rds-lg);
+        font-size: var(--fnt-sz-lt);
+        color: var(--text-l);
+        background-color: var(--background);
+
+      }
+
       .skillsTag {
         display: flex;
         justify-content: flex-start;
@@ -262,5 +277,14 @@
         }
       }
     }
+  }
+}
+
+@keyframes allFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
