--- a/src/views/assets/components/Post/post.module.scss
+++ b/src/views/assets/components/Post/post.module.scss
@@ -5,6 +5,7 @@
   min-height: 20dvh;
   border-radius: var(--bd-rds-sm);
   background-color: var(--components);
+  animation: allFade 0.5s ease-in-out forwards;
 
   .header {
     display: flex;
@@ -75,13 +76,26 @@
           z-index: 2;
         }
       }
+
+      .inviteUser {
+        display: flex;
+        align-items: center;
+        padding-inline: var(--padding-sm);
+
+        .btnInvite{
+          display: flex;
+          border-radius: var(--bd-rds-md);
+          padding-inline: var(--padding-sm);
+          background-color: var(--background);
+        }
+      }
     }
   }
 
   .content {
     display: flex;
     flex-direction: column;
-    z-index: -1;
+    z-index: 1;
 
     .textPost {
       padding: var(--padding-md);
@@ -334,5 +348,14 @@
       font-size: var(--fnt-sz-sm);
       font-weight: var(--fnt-wg-md);
     }
+  }
+}
+
+@keyframes allFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
