--- a/src/views/assets/components/Sidebar/sidebar.module.scss
+++ b/src/views/assets/components/Sidebar/sidebar.module.scss
@@ -44,7 +44,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       width: 100%;
-      max-width: 95px;
+      max-width: 100px;
     }
 
     .perfil_user_job {
@@ -56,7 +56,7 @@
       overflow: hidden;
       text-overflow: ellipsis;
       width: 100%;
-      max-width: 90px;
+      max-width: 100px;
     }
 
     .btn_icon_notify {
@@ -86,7 +86,84 @@
           transform: rotate(10deg);
         }
       }
-    } 
+    }
+
+    .dropdown {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 11dvh;
+      left: 14dvw;
+      width: 35dvw;
+      height: 58dvh;
+      max-width: 35dvw;
+      max-height: 58dvh;
+      border: 1px solid var(--background);
+      border-radius: var(--bd-rds-lt);
+      background-color: var(--components);
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+      z-index: 2;
+
+      .header_dropdown {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 12%;
+        max-height: 12%;
+        padding: var(--padding-lt);
+        padding-inline: var(--padding-md);
+        border-radius: var(--bd-rds-lt) var(--bd-rds-lt) 0 0;
+        background-color: var(--background);
+
+        .icon_title {
+          display: flex;
+          align-items: center;
+          gap: var(--gap-sm);
+          font-size: var(--fnt-sz-md);
+          font-weight: var(--fnt-wg-md);
+          color: var(--text-l);
+        }
+
+        .badge {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          gap: var(--gap-lt);
+          padding: 5px;
+          padding-inline: var(--padding-lt);
+          border-radius: var(--bd-rds-md);
+          background-color: var(--components);
+          color: var(--text-g);
+        }
+
+        .number {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          min-width: 20px;
+          min-height: 20px;
+          font-size: var(--fnt-sz-lt);
+          font-weight: var(--fnt-wg-lg);
+          color: var(--text-l);
+          border-radius: var(--bd-rds-xl);
+          background-color: #3b3d40;
+        }
+      }
+
+      .body_dropdown {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 88%;
+        max-height: 88%;
+        gap: var(--gap-lt);
+        padding: var(--padding-lt);
+        border-radius: 0 0 var(--bd-rds-lt) var(--bd-rds-lt);
+        overflow-y: auto;
+        overflow-x: hidden;
+      }
+    }
   }
 
   .main {
