--- a/src/views/assets/components/Chat/chat.module.scss
+++ b/src/views/assets/components/Chat/chat.module.scss
@@ -12,12 +12,43 @@
     flex-direction: column;
     width: 24%;
     height: 90%;
-    padding: var(--padding-sm);
+    gap: var(--gap-md);
     border-right: 3px solid var(--background);
     overflow-y: auto;
+
+    .textHeader {
+      padding-inline: var(--padding-md);
+      color: var(--text-l);
+      font-size: var(--fnt-sz-lg);
+      font-weight: var(--fnt-wg-lg);
+    }
+
+    .friends {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 100%;
+      gap: var(--gap-md);
+      padding: var(--padding-md);
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .nameUser {
+        text-align: start;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+        max-width: 100%;
+      }
+    }
   }
 
-  .chat{
+  .chat {
     display: flex;
     flex-direction: column;
     width: 76%;
